--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "compile_time_ls_colours"
 version = "0.1.0"
 edition = "2024"
+description = "A compile-time map of LS_COLORS-style extension-to-color mappings"
+license = "MIT"
 
 [build-dependencies]
 ansic = "0.1.7"
@@ -10,3 +12,8 @@ ansic = "0.1.7"
 [dependencies]
 phf = { version = "0.12.1", features = ["macros", "phf_macros"] }
 
+
+readme = "README.md"
+keywords = ["ls", "colors", "compile-time", "phf"]
+categories = ["command-line-utilities"]
+repository = "https://github.com/alexcu2718/compile_time_ls_colours
