--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,11 @@ version = "0.1.0"
 edition = "2024"
 description = "A compile-time map of LS_COLORS-style extension-to-color mappings"
 license = "MIT"
-
+keywords=["filesystem","colors","hashmap"]
+repository = "https://github.com/alexcu2718/compile_time_ls_colours"
 [build-dependencies]
 ansic = "0.1.7"
 
 
 [dependencies]
 phf = { version = "0.12.1", features = ["macros", "phf_macros"] }
-
-
-readme = "README.md"
-keywords = ["ls", "colors", "compile-time", "phf"]
-categories = ["command-line-utilities"]
-repository = "https://github.com/alexcu2718/compile_time_ls_colours
