--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "compile_time_ls_colours"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2024"
 description = "A compile-time map of LS_COLORS-style extension-to-color mappings"
 license = "MIT"
-keywords=["filesystem","colors","hashmap"]
+keywords=["filesystem","colors","hashmap","colours"]
 repository = "https://github.com/alexcu2718/compile_time_ls_colours"
 [build-dependencies]
 ansic = "0.1.7"
-
+phf_codegen = "0.12.1"
 
 [dependencies]
 phf = { version = "0.12.1", features = ["macros", "phf_macros"] }
+
