--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,14 @@ license = "MIT"
 keywords=["filesystem","colors","hashmap","colours"]
 repository = "https://github.com/alexcu2718/compile_time_ls_colours"
 [build-dependencies]
-phf_codegen = "0.13.1"
+phf_codegen = {version="0.13.1",optional=true}
 
 
 [dependencies]
-phf = { version = "0.13.1", features = ["macros", "phf_macros"] }
+phf = { version = "0.13.1", features = ["macros", "phf_macros"],optional=true }
+
+
+[features]
+default = []
+phf = ["dep:phf", "dep:phf_codegen"]
 
