--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "compile_time_ls_colours"
 version = "0.5.0"
-edition = "2024"
+rust-version = "1.75.0"
+edition="2021"
 description = "A compile-time map of LS_COLORS-style extension-to-colour mappings"
 license = "MIT"
 keywords=["filesystem","colors","hashmap","colours"]
